--- a/client/src/features/cnas/pages/CnasPage.module.scss
+++ b/client/src/features/cnas/pages/CnasPage.module.scss
@@ -4,6 +4,7 @@
   gap: 1.25rem;
   padding: 1.5rem;
   height: 100%;
+  overflow-y: auto;
 }
 
 .pageHeader {
