--- a/client/src/features/nomenclature/pages/SpecialtiesListPage.module.scss
+++ b/client/src/features/nomenclature/pages/SpecialtiesListPage.module.scss
@@ -2,6 +2,8 @@
 
 .page {
   padding: 1.5rem;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .content {
